--- a/r-simple-starter/index.html
+++ b/r-simple-starter/index.html
@@ -17,21 +17,23 @@
 <body>
     <!-- nav -->
     <nav class="navbar">
-        <div class="nav-header">
-            <a href="./index.html" class="nav-logo">
-                <img src="./img/simple_logo2.svg" alt="r simple starter">
-            </a>
-            <button type="button" class="btn nav-btn">
-                <i class="fas fa-align-justify"></i>
-            </button>
-        </div>
-        <div class="nav-links">
-            <a href="" class="nav-link">home</a>
-            <a href="" class="nav-link">about</a>
-            <a href="" class="nav-link">tags</a>
-            <a href="" class="nav-link">base</a>
-            <div class="nav-link">
-                <a href="./contact.html" class="btn contact-btn">contact</a>
+        <div class="nav-center">
+            <div class="nav-header">
+                <a href="./index.html" class="nav-logo">
+                    <img src="./img/simple_logo2.svg" alt="r simple starter">
+                </a>
+                <button type="button" class="btn nav-btn">
+                    <i class="fas fa-align-justify"></i>
+                </button>
+            </div>
+            <div class="nav-links">
+                <a href="" class="nav-link">home</a>
+                <a href="" class="nav-link">about</a>
+                <a href="" class="nav-link">tags</a>
+                <a href="" class="nav-link">base</a>
+                <div class="nav-link">
+                    <a href="./contact.html" class="btn contact-btn">contact</a>
+                </div>
             </div>
         </div>
     </nav>
