--- a/r-simple-starter/index.html
+++ b/r-simple-starter/index.html
@@ -31,8 +31,8 @@
                 <a href="" class="nav-link">about</a>
                 <a href="" class="nav-link">tags</a>
                 <a href="" class="nav-link">base</a>
-                <div class="nav-link">
-                    <a href="./contact.html" class="btn contact-btn">contact</a>
+                <div class="nav-link contact-btn">
+                    <a href="./contact.html" class="btn">contact</a>
                 </div>
             </div>
         </div>
