add footer html and footer css

--- a/r-simple-starter/index.html
+++ b/r-simple-starter/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R Simple || Starter</title>
+    <title>Simple || Starter</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <!-- normalize -->
@@ -20,7 +20,7 @@
         <div class="nav-center">
             <div class="nav-header">
                 <a href="./index.html" class="nav-logo">
-                    <img src="./img/simple_logo2.svg" alt="r simple starter">
+                    <img src="./img/simple_logo3.svg" alt="r simple starter">
                 </a>
                 <button type="button" class="btn nav-btn">
                     <i class="fas fa-align-justify"></i>
@@ -38,6 +38,19 @@
         </div>
     </nav>
     <!-- end of nav -->
+    <main class="page">
+        <h1>home</h1>
+    </main>
+    <!-- footer -->
+    <footer class="page-footer">
+        <p>
+            &copy;
+            <span id="date">2023</span>
+            <span class="footer-logo">SimpleStarter</span>
+            Built by 
+            <a href="https://github.com/rcferreira232/page">rafael</a> 
+        </p>
+    </footer>
     <script src="./js/app.js"></script>
 </body>
 </html>
