--- a/r-simple-starter/index.html
+++ b/r-simple-starter/index.html
@@ -45,7 +45,7 @@
     <footer class="page-footer">
         <p>
             &copy;
-            <span id="date">2023</span>
+            <span id="date"></span>
             <span class="footer-logo">SimpleStarter</span>
             Built by 
             <a href="https://github.com/rcferreira232/page">rafael</a> 
