--- a/r-simple-starter/index.html
+++ b/r-simple-starter/index.html
@@ -20,17 +20,17 @@
         <div class="nav-center">
             <div class="nav-header">
                 <a href="./index.html" class="nav-logo">
-                    <img src="./img/simple_logo3.svg" alt="r simple starter">
+                    <img src="./img/simple_logo3.svg" alt="simple starter">
                 </a>
                 <button type="button" class="btn nav-btn">
                     <i class="fas fa-align-justify"></i>
                 </button>
             </div>
             <div class="nav-links">
-                <a href="" class="nav-link">home</a>
-                <a href="" class="nav-link">about</a>
-                <a href="" class="nav-link">tags</a>
-                <a href="" class="nav-link">base</a>
+                <a href="./index.html" class="nav-link">home</a>
+                <a href="./about.html" class="nav-link">about</a>
+                <a href="./tags.html" class="nav-link">tags</a>
+                <a href="./base.html" class="nav-link">base</a>
                 <div class="nav-link contact-btn">
                     <a href="./contact.html" class="btn">contact</a>
                 </div>
