--- a/r-simple-starter/base.html
+++ b/r-simple-starter/base.html
@@ -48,7 +48,7 @@
             <span id="date"></span>
             <span class="footer-logo">SimpleStarter</span>
             Built by 
-            <a href="https://github.com/rcferreira232/page">rafael</a> 
+            <a href="https://github.com/rcferreira232/page">rcferreira232</a> 
         </p>
     </footer>
     <script src="./js/app.js"></script>
