--- a/r-simple-starter/contact.html
+++ b/r-simple-starter/contact.html
@@ -32,7 +32,7 @@
                 <a href="./tags.html" class="nav-link">tags</a>
                 <a href="./base.html" class="nav-link">base</a>
                 <div class="nav-link contact-btn">
-                    <a href="./contact.html" class="btn">contact</a>
+                    <a href="./contact.html" class="btn">rcferreira232</a>
                 </div>
             </div>
         </div>
