--- a/r-simple-starter/index.html
+++ b/r-simple-starter/index.html
@@ -39,7 +39,18 @@
     </nav>
     <!-- end of nav -->
     <main class="page">
-        <h1>home</h1>
+        <header class="hero">
+            <div class="hero-container">
+                <div class="hero-text">
+                    <h1>
+                        pru
+                    </h1>
+                    <h4>
+                        pru pru
+                    </h4>
+                </div>
+            </div>
+        </header>
     </main>
     <!-- footer -->
     <footer class="page-footer">
@@ -48,7 +59,7 @@
             <span id="date"></span>
             <span class="footer-logo">SimpleStarter</span>
             Built by 
-            <a href="https://github.com/rcferreira232/page">rcferreira232</a> 
+            <a href="https://github.com/rcferreira232/page" target="_blank" rel="noopener noreferrer">rcferreira232</a> 
         </p>
     </footer>
     <script src="./js/app.js"></script>
