add pigeon cards and tags

--- a/r-simple-starter/index.html
+++ b/r-simple-starter/index.html
@@ -51,6 +51,41 @@
                 </div>
             </div>
         </header>
+        <!-- pigeon container -->
+        <section class="pigeon-container">
+            <div class="tags-container">
+                <h5>pigeon</h5>
+                <div class="tags-list">
+                    <a href="./tag-template.html">black</a>
+                    <a href="./tag-template.html">grey</a>
+                    <a href="./tag-template.html">brown</a>
+                    <a href="./tag-template.html">white</a>
+                </div>
+            </div>
+            <div class="pigeons-list">
+                <!-- #1 -->
+                <a href="./single-recipe.html" class="pigeon">
+                    <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
+                    <p>price : R$ 15,00  | name : rudolf</p>
+                </a>
+                <!-- #1 -->
+                <a href="./single-recipe.html" class="pigeon">
+                    <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
+                    <p>price : R$ 15,00  | name : rudolf</p>
+                </a>
+                <!-- #1 -->
+                <a href="./single-recipe.html" class="pigeon">
+                    <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
+                    <p>price : R$ 15,00  | name : rudolf</p>
+                </a>
+                <!-- #1 -->
+                <a href="./single-recipe.html" class="pigeon">
+                    <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
+                    <p>price : R$ 15,00  | name : rudolf</p>
+                </a>
+            </div>
+        </section>
+        <!-- end of pigeon container -->
     </main>
     <!-- footer -->
     <footer class="page-footer">
