new logo and btn

--- a/r-simple-starter/index.html
+++ b/r-simple-starter/index.html
@@ -20,7 +20,7 @@
         <div class="nav-center">
             <div class="nav-header">
                 <a href="./index.html" class="nav-logo">
-                    <img src="./img/simple_logo3.svg" alt="simple starter">
+                    <img src="./img/simple_logo6.svg" alt="simple starter">
                 </a>
                 <button type="button" class="btn nav-btn">
                     <i class="fas fa-align-justify"></i>
@@ -54,7 +54,7 @@
         <!-- pigeon container -->
         <section class="pigeon-container">
             <div class="tags-container">
-                <h5>pigeon</h5>
+                <h4>pigeon</h4>
                 <div class="tags-list">
                     <a href="./tag-template.html">black</a>
                     <a href="./tag-template.html">grey</a>
@@ -66,21 +66,25 @@
                 <!-- #1 -->
                 <a href="./single-recipe.html" class="pigeon">
                     <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
+                    <h5>black</h5>
                     <p>price : R$ 15,00  | name : rudolf</p>
                 </a>
-                <!-- #1 -->
+                <!-- #2 -->
                 <a href="./single-recipe.html" class="pigeon">
                     <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
+                    <h5>grey</h5>
                     <p>price : R$ 15,00  | name : rudolf</p>
                 </a>
-                <!-- #1 -->
+                <!-- #3 -->
                 <a href="./single-recipe.html" class="pigeon">
                     <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
+                    <h5>brown</h5>
                     <p>price : R$ 15,00  | name : rudolf</p>
                 </a>
-                <!-- #1 -->
+                <!-- #4 -->
                 <a href="./single-recipe.html" class="pigeon">
                     <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
+                    <h5>white</h5>
                     <p>price : R$ 15,00  | name : rudolf</p>
                 </a>
             </div>
