--- a/r-simple-starter/index.html
+++ b/r-simple-starter/index.html
@@ -64,25 +64,25 @@
             </div>
             <div class="pigeons-list">
                 <!-- #1 -->
-                <a href="./single-recipe.html" class="pigeon">
+                <a href="./single-pigeon.html" class="pigeon">
                     <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
                     <h5>black</h5>
                     <p>price : R$ 15,00  | name : rudolf</p>
                 </a>
                 <!-- #2 -->
-                <a href="./single-recipe.html" class="pigeon">
+                <a href="./single-pigeon.html" class="pigeon">
                     <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
                     <h5>grey</h5>
                     <p>price : R$ 15,00  | name : rudolf</p>
                 </a>
                 <!-- #3 -->
-                <a href="./single-recipe.html" class="pigeon">
+                <a href="./single-pigeon.html" class="pigeon">
                     <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
                     <h5>brown</h5>
                     <p>price : R$ 15,00  | name : rudolf</p>
                 </a>
                 <!-- #4 -->
-                <a href="./single-recipe.html" class="pigeon">
+                <a href="./single-pigeon.html" class="pigeon">
                     <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
                     <h5>white</h5>
                     <p>price : R$ 15,00  | name : rudolf</p>
