--- a/r-simple-starter/index.html
+++ b/r-simple-starter/index.html
@@ -1,106 +1,110 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple || Starter</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
     <!-- normalize -->
-    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/normalize.css" />
     <!-- font-awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
     <!-- main css -->
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <!-- nav -->
     <nav class="navbar">
-        <div class="nav-center">
-            <div class="nav-header">
-                <a href="./index.html" class="nav-logo">
-                    <img src="./img/simple_logo6.svg" alt="simple starter">
-                </a>
-                <button type="button" class="btn nav-btn">
+      <div class="nav-center">
+        <div class="nav-header">
+          <a href="./index.html" class="nav-logo">
+            <img src="./img/simple_logo6.svg" alt="simple starter" />
+          </a>
+          <!-- <button type="button" class="btn nav-btn">
                     <i class="fas fa-align-justify"></i>
-                </button>
-            </div>
-            <div class="nav-links">
-                <a href="./index.html" class="nav-link">home</a>
-                <a href="./about.html" class="nav-link">about</a>
-                <a href="./tags.html" class="nav-link">tags</a>
-                <a href="./base.html" class="nav-link">base</a>
-                <div class="nav-link contact-btn">
-                    <a href="./contact.html" class="btn">contact</a>
-                </div>
-            </div>
+                </button> -->
         </div>
+        <div class="nav-links">
+          <a href="./index.html" class="nav-link">home</a>
+          <a href="./about.html" class="nav-link">about</a>
+          <a href="./tags.html" class="nav-link">tags</a>
+          <a href="./base.html" class="nav-link">base</a>
+          <div class="nav-link contact-btn">
+            <a href="./contact.html" class="btn">contact</a>
+          </div>
+        </div>
+      </div>
     </nav>
     <!-- end of nav -->
     <main class="page">
-        <header class="hero">
-            <div class="hero-container">
-                <div class="hero-text">
-                    <h1>
-                        pru
-                    </h1>
-                    <h4>
-                        pru pru
-                    </h4>
-                </div>
-            </div>
-        </header>
-        <!-- pigeon container -->
-        <section class="pigeon-container">
-            <div class="tags-container">
-                <h4>pigeon</h4>
-                <div class="tags-list">
-                    <a href="./tag-template.html">black</a>
-                    <a href="./tag-template.html">grey</a>
-                    <a href="./tag-template.html">brown</a>
-                    <a href="./tag-template.html">white</a>
-                </div>
-            </div>
-            <div class="pigeons-list">
-                <!-- #1 -->
-                <a href="./single-pigeon.html" class="pigeon">
-                    <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
-                    <h5>black</h5>
-                    <p>price : R$ 15,00  | name : rudolf</p>
-                </a>
-                <!-- #2 -->
-                <a href="./single-pigeon.html" class="pigeon">
-                    <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
-                    <h5>grey</h5>
-                    <p>price : R$ 15,00  | name : rudolf</p>
-                </a>
-                <!-- #3 -->
-                <a href="./single-pigeon.html" class="pigeon">
-                    <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
-                    <h5>brown</h5>
-                    <p>price : R$ 15,00  | name : rudolf</p>
-                </a>
-                <!-- #4 -->
-                <a href="./single-pigeon.html" class="pigeon">
-                    <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img">
-                    <h5>white</h5>
-                    <p>price : R$ 15,00  | name : rudolf</p>
-                </a>
-            </div>
-        </section>
-        <!-- end of pigeon container -->
+      <header class="hero">
+        <div class="hero-container">
+          <div class="hero-text">
+            <h1>pru</h1>
+            <h2>pru pru</h2>
+          </div>
+        </div>
+      </header>
+      <!-- pigeon container -->
+      <section class="pigeon-container">
+        <div class="tags-container">
+          <h4>pigeon</h4>
+          <div class="tags-list">
+            <a href="./tag-black.html">black</a>
+            <a href="./tag-grey.html">grey</a>
+            <a href="./tag-brown.html">brown</a>
+            <a href="./tag-white.html">white</a>
+          </div>
+        </div>
+        <div class="pigeons-list">
+          <!-- #1 -->
+          <a href="./single-pigeon.html" class="pigeon">
+            <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img" />
+            <h5>black</h5>
+            <p>price : R$ 15,00 | name : rudolf</p>
+          </a>
+          <!-- #2 -->
+          <a href="./single-pigeon2.html" class="pigeon">
+            <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img" />
+            <h5>grey</h5>
+            <p>price : R$ 15,00 | name : rudolf</p>
+          </a>
+          <!-- #3 -->
+          <a href="./single-pigeon3.html" class="pigeon">
+            <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img" />
+            <h5>brown</h5>
+            <p>price : R$ 15,00 | name : rudolf</p>
+          </a>
+          <!-- #4 -->
+          <a href="./single-pigeon4.html" class="pigeon">
+            <img src="./img/pru.jpg" alt="pigeon" class="img pigeon-img" />
+            <h5>white</h5>
+            <p>price : R$ 15,00 | name : rudolf</p>
+          </a>
+        </div>
+      </section>
+      <!-- end of pigeon container -->
     </main>
     <!-- footer -->
     <footer class="page-footer">
-        <p>
-            &copy;
-            <span id="date"></span>
-            <span class="footer-logo">SimpleStarter</span>
-            Built by 
-            <a href="https://github.com/rcferreira232/page" target="_blank" rel="noopener noreferrer">rcferreira232</a> 
-        </p>
+      <p>
+        &copy;
+        <span id="date"></span>
+        <span class="footer-logo">SimpleStarter</span>
+        Built by
+        <a
+          href="https://github.com/rcferreira232/page"
+          target="_blank"
+          rel="noopener noreferrer"
+          >rcferreira232</a
+        >
+      </p>
     </footer>
     <script src="./js/app.js"></script>
-</body>
+  </body>
 </html>
